# LLP3_ProtoBuf

./: CMakeLists.txt  LCJNikita.cbp  Report.docx  client.c  main.c  server.c
gremlin_module/: CMakeLists.txt  LLP2_Gremlin.cbp
gremlin_module/include/: structure.h
gremlin_module/include/stools/: printer.h  string_tools.h
gremlin_module/include/view_tools/: alloc_view.h  parser_pieces.h
gremlin_module/src/stools/: printer.c  string_tools.c
gremlin_module/src/view_tools/: alloc_view.c  parser_pieces.c
proto_module/: message.options  message.pb.c  message.pb.h  message.proto
proto_module/nanopb/: CMakeLists.txt  libprotobuf-nanopb.so.0  libprotobuf-nanopbd.so.0  nanopb.cbp  pb.h
proto_module/nanopb/examples/cmake_relpath/: CMakeLists.txt
proto_module/nanopb/examples/cmake_simple/: CMakeLists.txt
proto_module/nanopb/extra/: FindNanopb.cmake
proto_module/nanopb/generator/: nanopb_generator.py
proto_module/nanopb/tests/common/: malloc_wrappers_syshdr.h
server_module/: CMakeLists.txt  README.md  graph.c  graph.h  legacy.c  main.c  reqest_handler.c  reqest_handler.h  string_tools.c  string_tools.h
